# esp32_sterownik

./: .gitmodules  CMakeLists.txt  README.md  esp32_workspace.code-workspace  esp_controller.code-workspace  sdkconfig  sdkconfig.old
components/backend/: cmd_client.c  cmd_client.h  cmd_client_req.c  cmd_server.c  cmd_server.h  parse_cmd.c  parse_cmd.h  telnet.c  wifidrv.c  wifidrv.h
components/config/: config.c  config.h
components/drv/: CMakeLists.txt  atmega_communication.c  battery.c  battery.h  but.c  but.h  buzzer.c  error_siewnik.c  error_siewnik.h  error_solarka.c  error_solarka.h  fast_add.c  fast_add.h  keepalive.c  keepalive.h  led.c  led.h  measure.c  measure.h  motor.c  motor.h  power_on.c  power_on.h  ringBuff.c  ringBuff.h  server_conroller.c  server_controller.h  servo.c  servo.h  sleep.c  sleep_e.h  ultrasonar.c  ultrasonar.h  vibro.c  vibro.h
components/menu/: CMakeLists.txt  dictionary.c  dictionary.h  menu.c  menu.h  menu_auto.c  menu_auto.h  menu_backend.c  menu_backend.h  menu_bootup.c  menu_bootup.h  menu_default.c  menu_default.h  menu_drv.c  menu_drv.h  menu_low_battery.c  menu_low_battery.h  menu_main.c  menu_param.c  menu_param.h  menu_settings.c  menu_settings.h  menu_state.c  menu_state.h  oled.c  oled.h  oled_fonts.c  oled_glcd.h  ssd1306.c  ssd1306.h  ssdFigure.c  ssdFigure.h  start_menu.c  start_menu.h  wifi_menu.c  wifi_menu.h
components/mongoose_drv/: CMakeLists.txt
components/project_drv/: CMakeLists.txt  error_siewnik.c  measure.c  (+13 more)
main/: CMakeLists.txt  app_config.h  main.c  parameters.c  parameters.h  project_parameters.h
